[metadata]
name = snoop
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Powerful debugging tools for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmojaki/snoop
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Debuggers
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Environment :: Console

[options]
packages = snoop
zip_safe = False
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]
install_requires =
    six
    cheap_repr>=0.4.0
    executing
    asttokens
    pygments
    backports.functools_lru_cache; python_version == "2.7"

tests_require =
    pytest
    littleutils
    prettyprinter
    pprintpp

    pytest-order; python_version>='3.7'
    pytest-order<=0.11.0; python_version<'3.7'

    pandas>=0.24.2; platform_python_implementation != 'PyPy'
    numpy>=1.16.5; platform_python_implementation != 'PyPy'
    birdseye; platform_python_implementation != 'PyPy'

    Django; python_version>='3.5'

[options.extras_require]
tests =
    pytest
    littleutils
    prettyprinter
    pprintpp

    pandas>=0.24.2; platform_python_implementation != 'PyPy'
    numpy>=1.16.5; platform_python_implementation != 'PyPy'
    birdseye; platform_python_implementation != 'PyPy'

    Django; python_version>='3.5'

[bdist_wheel]
universal=1
