[metadata]
name = snoop
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Powerful debugging tools for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmojaki/snoop
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Topic :: Software Development :: Debuggers
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Environment :: Console

[options]
packages = snoop
zip_safe = False
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]
python_requires = >=3.8
install_requires =
    cheap_repr>=0.4.0
    executing
    asttokens
    pygments

[options.extras_require]
tests =
    pytest
    littleutils
    prettyprinter
    pprintpp

    pytest-order

    pandas>=0.24.2; platform_python_implementation != 'PyPy'
    numpy>=1.16.5; platform_python_implementation != 'PyPy'
    birdseye; platform_python_implementation != 'PyPy'

    Django
